Closes #258 Implement Email validation in checkout

--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/CustomerUser.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/CustomerUser.cshtml
@@ -574,6 +574,15 @@
     <table class="adminContent">
         <tr>
             <td class="adminTitle">
+                @Html.SmartLabelFor(model => model.AddressSettings.ValidateEmailAddress)
+            </td>
+            <td class="adminData">
+                @Html.SettingEditorFor(model => model.AddressSettings.ValidateEmailAddress)
+                @Html.ValidationMessageFor(model => model.AddressSettings.ValidateEmailAddress)
+            </td>
+        </tr>
+        <tr>
+            <td class="adminTitle">
                 @Html.SmartLabelFor(model => model.AddressSettings.CompanyEnabled)
             </td>
             <td class="adminData">
