--- a/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Customer/Orders.cshtml
@@ -126,7 +126,7 @@
                     <div class="buttons pull-right">
                         @if (order.IsReturnRequestAllowed)
                         {
-                            <a class="btn" href="@Url.RouteUrl("ReturnRequest", new { orderId = order.Id })" rel="nofollow">
+                            <a class="btn" href="@Url.Action("ReturnRequest", "ReturnRequest", new { id = order.Id })" rel="nofollow">
 								<i class="fa fa-reply"></i>
                                 @T("Account.CustomerOrders.ReturnItems")
                             </a>
