--- a/src/Presentation/SmartStore.Web/Views/ReturnRequest/ReturnRequest.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ReturnRequest/ReturnRequest.cshtml
@@ -10,8 +10,7 @@
     <div class="page-title">
         <h1>@string.Format(@T("ReturnRequests.Title").Text, Model.OrderId)</h1>
     </div>
-    <div class="clear">
-    </div>
+
     <div class="page-body">
         @if (!String.IsNullOrEmpty(Model.Result))
         {
@@ -27,9 +26,11 @@
                 <dl>
                     <dd>
                         <table class="table table-striped table-hover">
-                            <col />
-                            <col />
-                            <col width="1" />
+							<colgroup>
+								<col />
+								<col />
+								<col width="1" />								
+							</colgroup>
                             <thead>
                                 <tr>
                                     <th class="a-center">
@@ -109,7 +110,8 @@
 			
             <div class="buttons">
 				<button type="submit" name="submit-return-request" value="save" class="btn btn-primary">
-					<i class="fa fa-check"></i>&nbsp;@T("ReturnRequests.Submit")
+					<i class="fa fa-check"></i>
+					@T("ReturnRequests.Submit")
 				</button>
             </div>
             }
