Tax rates persisted on order item level to avoid rounding issues (required for Debitoor, Accarda and Payone)

--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/AddProductToOrderDetails.cshtml
@@ -64,6 +64,14 @@
 				    @Html.EditorFor(model => model.UnitPriceExclTax)
 			    </td>
 		    </tr>
+			<tr>
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.TaxRate)
+				</td>
+				<td class="adminData">
+					@Html.EditorFor(model => model.TaxRate)
+				</td>
+			</tr>
 		    <tr>
 			    <td class="adminTitle">
 				    @Html.SmartLabelFor(model => model.Quantity)
