--- a/src/Presentation/SmartStore.Web/Administration/Views/Order/_AutoUpdateOrderItem.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Order/_AutoUpdateOrderItem.cshtml
@@ -12,6 +12,7 @@
 			<input type="hidden" name="NewQuantity" />
 			<input type="hidden" name="NewUnitPriceInclTax" />
 			<input type="hidden" name="NewUnitPriceExclTax" />
+			<input type="hidden" name="NewTaxRate" />
 			<input type="hidden" name="NewDiscountInclTax" />
 			<input type="hidden" name="NewDiscountExclTax" />
 			<input type="hidden" name="NewPriceInclTax" />
