--- a/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/PaymentMethod.Mobile.cshtml
@@ -71,7 +71,7 @@
                             </div> 
                         }
                         <div class="select-button">
-                            <input type="submit" name="nextstep" value="@T("Checkout.NextButton")" />
+							<input type="submit" name="nextstep" id="nextstep" value="@T("Checkout.NextButton")" />
                         </div>
                     </div>
                 }
