--- a/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.Mobile.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Checkout/ShippingAddress.Mobile.cshtml
@@ -128,7 +128,7 @@
                     }
                 </div>
                 <div class="buttons">
-                    <input type="submit" name="nextstep" value="@T("Checkout.NextButton")" />
+					<input type="submit" name="nextstep" id="nextstep" value="@T("Checkout.NextButton")" />
                 </div>
             }
         </div>
