--- a/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/ShoppingCart/OrderSummary.cshtml
@@ -106,6 +106,7 @@
 			{
 				<span>@item.Quantity</span>
 			}
+            <span class="measure-unit">@item.QuantityUnit</span>
 		</td>
 		<td class="nobr omega">
 			<span class="product-subtotal">@item.SubTotal</span>
