--- a/src/Presentation/SmartStore.Web/Views/Order/Details.Print.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Order/Details.Print.cshtml
@@ -289,6 +289,7 @@
 		}
 		<td class="text-center">
 			@item.Quantity
+            @item.QuantityUnitThis
 		</td>
 		<td class="text-right">
 			@item.UnitPrice
