--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/cart.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/cart.less
@@ -64,6 +64,9 @@
 .cart .cart-item-row .qty-input {
 	width: 32px;
 }
+.cart .cart-item-row .measure-unit {
+	vertical-align: top;
+}
 .order-summary-content .cart-footer {
 	margin-top: 20px;
 }
