--- a/src/Presentation/SmartStore.Web/Administration/Views/QuantityUnit/Edit.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/QuantityUnit/Edit.cshtml
@@ -7,7 +7,7 @@
 {
     <div class="section-header">
         <div class="title">
-            @T("Admin.Configuration.QuantityUnit.EditQuantityUnitDetails") - @Model.Name @Html.ActionLink("(" + @T("Admin.Configuration.BackToList") + ")", "List")
+            @T("Admin.Configuration.QuantityUnit.EditQuantityUnitDetails") - @Model.Name @Html.ActionLink("(" + @T("Admin.Common.BackToList") + ")", "List")
         </div>
         <div class="options">
             <button type="submit" name="save" value="save" class="btn btn-primary"><i class="fa fa-check"></i>&nbsp;@T("Admin.Common.Save")</button>
