--- a/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Setting/Catalog.cshtml
@@ -28,7 +28,8 @@
             $("#@Html.FieldIdFor(model => model.ProductSearchAllowCustomersToSelectPageSize)").click(toggleSearchPageSize);
             $("#@Html.FieldIdFor(model => model.ProductSearchAutoCompleteEnabled)").click(toggleProductSearchAutoComplete);
             $("#@Html.FieldIdFor(model => model.CompareProductsEnabled)").click(toggleCompareProducts);
-            $("#@Html.FieldIdFor(model => model.EnableHtmlTextCollapser)").click(toggleHtmlTextCollapsedHeight);
+        	$("#@Html.FieldIdFor(model => model.EnableHtmlTextCollapser)").click(toggleHtmlTextCollapsedHeight);
+        	$("#@Html.FieldIdFor(model => model.FilterEnabled)").click(toggleFilterEnabled);
 
             toggleShowCategoryProductNumberIncludingSubcategories();
             toggleEmailAFriend();
@@ -41,6 +42,7 @@
             toggleProductSearchAutoComplete();
             toggleCompareProducts();
             toggleHtmlTextCollapsedHeight();
+            toggleFilterEnabled();
         });
 
         function toggleShowCategoryProductNumberIncludingSubcategories() {
@@ -140,6 +142,16 @@
                 $('#pnlHtmlTextCollapsedHeight').hide();
             }
         }
+
+		function toggleFilterEnabled() {
+			if ($('#@Html.FieldIdFor(model => model.FilterEnabled)').is(':checked')) {
+				$('#pnlMaxFilterItemsToDisplay').show();
+				$('#pnlExpandAllFilterCriteria').show();
+			} else {
+				$('#pnlMaxFilterItemsToDisplay').hide();
+				$('#pnlExpandAllFilterCriteria').hide();
+			}
+		}
     </script>
 	
 	@Html.Action("StoreScopeConfiguration", "Setting")
@@ -356,6 +368,7 @@
                     @Html.ValidationMessageFor(model => model.CategoryBreadcrumbEnabled)
                 </td>
             </tr>
+
             <tr>
                 <td class="adminTitle">
                     @Html.SmartLabelFor(model => model.FilterEnabled)
@@ -365,25 +378,24 @@
                     @Html.ValidationMessageFor(model => model.FilterEnabled)
                 </td>
             </tr>
-
-            <tr>
-                <td class="adminTitle">
-                    @Html.SmartLabelFor(model => model.MaxFilterItemsToDisplay)
-                </td>
-                <td class="adminData">
-                    @Html.SettingEditorFor(model => model.MaxFilterItemsToDisplay)
-                    @Html.ValidationMessageFor(model => model.MaxFilterItemsToDisplay)
-                </td>
-            </tr>
-            <tr>
-                <td class="adminTitle">
-                    @Html.SmartLabelFor(model => model.ExpandAllFilterCriterias)
-                </td>
-                <td class="adminData">
-                    @Html.SettingEditorFor(model => model.ExpandAllFilterCriterias)
-                    @Html.ValidationMessageFor(model => model.ExpandAllFilterCriterias)
-                </td>
-            </tr>
+			<tr id="pnlMaxFilterItemsToDisplay">
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.MaxFilterItemsToDisplay)
+				</td>
+				<td class="adminData">
+					@Html.SettingEditorFor(model => model.MaxFilterItemsToDisplay)
+					@Html.ValidationMessageFor(model => model.MaxFilterItemsToDisplay)
+				</td>
+			</tr>
+			<tr id="pnlExpandAllFilterCriteria">
+				<td class="adminTitle">
+					@Html.SmartLabelFor(model => model.ExpandAllFilterCriteria)
+				</td>
+				<td class="adminData">
+					@Html.SettingEditorFor(model => model.ExpandAllFilterCriteria)
+					@Html.ValidationMessageFor(model => model.ExpandAllFilterCriteria)
+				</td>
+			</tr>
 
             <tr>
                 <td class="adminTitle">
