--- a/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
+++ b/src/Presentation/SmartStore.Web/Administration/Views/Plugin/List.cshtml
@@ -32,6 +32,10 @@
 						{
 							<span class="label label-warning">@T("Admin.Configuration.Plugins.Fields.Installed")</span>
 						}
+						@if (plugin.IsLicensed)
+						{
+							<span class="label label-success">@T("Admin.Common.Licensed")</span>
+						}
 					</div>
 					<div class="module-info">
 						@if (plugin.Author.HasValue())
@@ -72,6 +76,13 @@
 									<a class="btn btn-small plugin-configure" href="@plugin.ConfigurationUrl">
 										<i class="fa fa-cog"></i>
 										@T("Admin.Configuration.Plugins.Fields.Configure")
+									</a>
+								}
+								@if (plugin.LicenseUrl.HasValue())
+								{
+									<a class="btn btn-small plugin-licence" href="javascript:void(0)" data-url="@plugin.LicenseUrl">
+										<i class="fa fa-key"></i>
+										@T("Admin.Common.License")
 									</a>
 								}
 							</div>
@@ -175,6 +186,21 @@
         </tr>
     </table>
 }
+
+<div id="plugin-licence-modal">	
+	<div class="modal hide fade" tabindex="-1">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal"><b>x</b></button>
+			<h4 class="caption">@T("Admin.Common.License")</h4>
+		</div>
+		<div class="modal-body"></div>
+		<div class="modal-footer">
+			<button class="btn btn-primary" data-dismiss="modal">@T("Common.OK")</button>
+			<button class="btn" data-dismiss="modal">@T("Common.Cancel")</button>
+		</div>
+	</div>
+</div>
+
 
 <script type="text/javascript">
     $(document).ready(function () {
@@ -364,6 +390,7 @@
             });
         });
 
+		// edit plugin
         $('#plugins-form').on('click', '.plugin-edit', function (e) {
             OpenWindow(
                 '{0}?systemName={1}&btnId=btnRefresh&formId=plugins-form'.format(
@@ -376,6 +403,33 @@
             );
             return false;
         });
+
+    	// licence plugin
+    	$(document).on('click', 'a.plugin-licence', function (e) {
+    		var dialog = $('#plugin-licence-modal'),
+				url = $(this).attr('data-url');
+
+    		dialog.find('.modal-body').empty();
+
+    		$(this).doAjax({
+    			type: 'GET',
+    			smallIcon: dialog.find('.modal-body'),
+    			callbackSuccess: function (resp) {
+    				dialog.find('.modal-body').html(resp);
+    				
+    				setTimeout(function() {
+    					dialog.find('[name="Licenses[0].LicenseKey"]').focus();
+    				}, 1000);
+
+    				dialog.find('.btn-primary').click(function() {
+    					dialog.find('form:first').submit();
+    				});
+    			}
+    		});
+
+    		dialog.find('.modal').modal('show');
+    		return false;
+    	});
 
         $('#btnRefresh').click(function () {
             // reload page
