--- a/src/Presentation/SmartStore.Web/Themes/Alpha/Content/product.less
+++ b/src/Presentation/SmartStore.Web/Themes/Alpha/Content/product.less
@@ -153,7 +153,7 @@
 	padding-top: 0 !important;
 }
 .product-details-page .product-data .qty-input {
-	margin: 0 10px 0 5px;
+	margin: 0 0 0 5px;
 }
 .product-details-page .price-details {
     text-shadow: 0 -1px 0 #fff;
