License storage now part of the licensing component

--- a/src/Presentation/SmartStore.Web/Views/Shared/LicenseRequired.cshtml
+++ b/src/Presentation/SmartStore.Web/Views/Shared/LicenseRequired.cshtml
@@ -24,7 +24,7 @@
 				<strong>Action:</strong> @Model["ActionName"]
 			</p>
 			<p>
-				<span>@Model["Message"]</span>
+				<span>@Html.Raw(Model["Message"])</span>
 			</p>
 		</div>
 	</div>
